# cpp20_event_loop

./: .gitignore  CMakeLists.txt
docs/source/: conf.py  index.rst
docs/source/images/: co_await.drawio
src/: CMakeLists.txt  awaitable.cc  awaitable.hpp  future.cc  future.hpp
tests/: CMakeLists.txt  generator.hpp  test_future.cpp
